[package]
name = "seamless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
device_query = {version="1.1.3", optional = true}
mdns = "3.0.0"
tokio = {version = "1.33.0", features = ["full"]}
libmdns="0.7"
tokio-stream = "0.1.14"
serde_json = "1.0.107"


[features]
send=["dep:device_query"]
