[package]
name = "seamless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = {version="1.1.3", optional = true}
display-info = "0.4.3"
serde_json = "1.0.107"
tokio = {version="1.33.0", features = ["full"]}


[features]
send_mouse=["dep:device_query"]
