[package]
name = "seamless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
display-info = "0.4.3"
eframe = "0.23.0"
enigo = "0.2.1"
device_query ="1.1.3"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
tokio = {version="1.34.0", features = ["full"]}
uuid = { version = "1.5.0", features = ["v4"] }
